[package]
name = "moodmake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
image = "0.24.0"
imagesize = "0.12.0"
rand = "0.8.5"
time = { version = "0.3", features = ["macros"] }
